--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2",
     "tailwindcss": "3.3.3"
   }
 }
